--- a/index.htm
+++ b/index.htm
@@ -105,12 +105,12 @@
     <link
       rel="alternate"
       type="application/json+oembed"
-      href="https://oh-scipe.github.io/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fciren.utk.edu%2F"
+      href="https://oh-scipe.github.io/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fciren.oh-scipe.github.io%2F"
     />
     <link
       rel="alternate"
       type="text/xml+oembed"
-      href="https://oh-scipe.github.io/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fciren.utk.edu%2F&amp;format=xml"
+      href="https://oh-scipe.github.io/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fciren.oh-scipe.github.io%2F&amp;format=xml"
     />
     <script
       src="About%20CIREN%20-%20Cross-Institutional%20Research%20Engagement%20Network%20(CIREN)_files/wp-emoji-release.min.js"
@@ -134,7 +134,7 @@
       >
       <a
         class="sr-only sr-only-focusable"
-        href="https://oed.utk.edu/ada/campus-accessibility/"
+        href="https://oed.oh-scipe.github.io/ada/campus-accessibility/"
         title="Report an accessibility issue"
         >Report an accessibility issue</a
       >
@@ -555,15 +555,15 @@
           </div>
           <!-- 
           <div id="toolkit">
-            <form id="utk_seek" method="GET" action="//search.utk.edu/search">
+            <form id="utk_seek" method="GET" action="//search.oh-scipe.github.io/search">
               <label for="utk_seek" class="sr-only">Search for:</label>
               <div class="form-group">
                 <input
                   type="text"
                   id="utk_seek_text"
                   name="q"
-                  onfocus="if(this.value == 'Search utk.edu') { this.value = ''; }"
-                  value="Search utk.edu"
+                  onfocus="if(this.value == 'Search oh-scipe.github.io') { this.value = ''; }"
+                  value="Search oh-scipe.github.io"
                   class="form-control"
                   title="search"
                   speech=""
@@ -588,14 +588,14 @@
 
             <br />
             <nav role="navigation">
-              <a href="http://calendar.utk.edu/">Events</a>
+              <a href="http://calendar.oh-scipe.github.io/">Events</a>
               <a href="https://oh-scipe.github.io/alpha/">A-Z </a>
               <a href="https://oh-scipe.github.io/admissions/">Apply</a>
-              <a href="https://www.utk.edu/aboutut/privacy/">Privacy</a>
-              <a href="http://maps.utk.edu/">Map</a>
-              <a href="http://directory.utk.edu/">Directory</a>
-              <a href="http://giveto.utk.edu/">Give to UT</a>
-              <a href="https://oed.utk.edu/ada/campus-accessibility/"
+              <a href="https://www.oh-scipe.github.io/aboutut/privacy/">Privacy</a>
+              <a href="http://maps.oh-scipe.github.io/">Map</a>
+              <a href="http://directory.oh-scipe.github.io/">Directory</a>
+              <a href="http://giveto.oh-scipe.github.io/">Give to UT</a>
+              <a href="https://oed.oh-scipe.github.io/ada/campus-accessibility/"
                 >Accessibility</a
               >
             </nav>
@@ -640,7 +640,7 @@
       /* <![CDATA[ */
       var url_object = {
         templateDirectory:
-          "https:\/\/ciren.utk.edu\/wp-content\/themes\/ut-thehill",
+          "https:\/\/ciren.oh-scipe.github.io\/wp-content\/themes\/ut-thehill",
         siteId: "437",
         nivo_anim_speed: "500",
         nivo_pause_time: "3000",
