--- a/keeper.htm
+++ b/keeper.htm
@@ -64,7 +64,7 @@
                 class="wp-social-link wp-social-link-mail wp-block-social-link"
               >
                 <a
-                  href="mailto:lcrosby1@utk.edu"
+                  href="mailto:lcrosby1@oh-scipe.github.io"
                   class="wp-block-social-link-anchor"
                   ><svg
                     width="24"
@@ -179,7 +179,7 @@
                 class="wp-social-link wp-social-link-mail wp-block-social-link"
               >
                 <a
-                  href="mailto:kodbadra@utk.edu"
+                  href="mailto:kodbadra@oh-scipe.github.io"
                   class="wp-block-social-link-anchor"
                   ><svg
                     width="24"
@@ -284,7 +284,7 @@
                 class="wp-social-link wp-social-link-mail wp-block-social-link"
               >
                 <a
-                  href="mailto:rtucke26@utk.edu"
+                  href="mailto:rtucke26@oh-scipe.github.io"
                   class="wp-block-social-link-anchor"
                   ><svg
                     width="24"
