fix: people info

--- a/events.htm
+++ b/events.htm
@@ -601,9 +601,9 @@
      
             <div id="address">
               <p>
-                <strong>OHIO DEPARTMENT OF HIGHER EDUCATION</strong><br />
-                25 South Front Street<br />
-                Columbus, Ohio 43215
+                <strong>Case Western Reserve University</strong><br />
+                10900 Euclid Avenue<br />
+                Cleveland, Ohio 44106
               </p>
             </div>
 
