--- a/people.htm
+++ b/people.htm
@@ -504,7 +504,7 @@
                   <!-- VIPIN END -->
 
 
-                <!-- VIPIN START -->
+                <!-- Karen START -->
                 <div>
                   <div class="wp-block-media-text alignwide is-stacked-on-mobile is-vertically-aligned-top" style="grid-template-columns: 40% auto">
                     <figure class="wp-block-media-text__media">
@@ -513,7 +513,7 @@
                         decoding="async"
                         width="250"
                         height="350"
-                        src="karen.jpeg" 
+                        src="karen.png" 
                         alt="description_of_image" 
                         class="wp-image-XXXX size-full"
                       />
@@ -535,15 +535,14 @@
                           </font></a>
                       </p>
                       <p>
-                        Karen Tomko, Ph.D., is the Director of Research and Manager of the Scientific Applications group at the Ohio Supercomputer Center, and an XSEDE Campus Champion for Ohio State University. Her research focuses on application parallelization, programming models for coprocessors, and accelerators.
-
+                        Karen Tomko, Ph.D., is the Director of Research Software Applications and leads the Scientific Applications group at the Ohio Supercomputer Center. Tomko also serves on the steering committee for the Midwest Research Computing and Data Consortium and is a member of the leadership team for the ICICLE AI institute.
                         <p>
-                        <strong>Expertise:</strong>High Performance Computing and Applications to Science, Engineering, Biology, and Medicine; Artificial Intelligence/Machine Learning/Data Science.
+                        <strong>Expertise:</strong> High performance computing, research software engineering, application performance tuning, cyberinfrastructure for AI, workforce development for cyberinfrastructure professionals.
                       </p>
                       <ul class="wp-block-social-links alignleft is-layout-flex wp-block-social-links-is-layout-flex">
                         <li class="wp-social-link wp-social-link-mail wp-block-social-link">
                           <a
-                            href="mailto:vipin@case.edu" 
+                            href="mailto:ktomko@osc.edu" 
                             class="wp-block-social-link-anchor"
                             ><svg
                               width="24"
@@ -1124,9 +1123,9 @@
 
             <div id="address">
               <p>
-                <strong>OHIO DEPARTMENT OF HIGHER EDUCATION</strong><br />
-                25 South Front Street<br />
-                Columbus, Ohio 43215
+                <strong>Case Western Reserve University</strong><br />
+                10900 Euclid Avenue<br />
+                Cleveland, Ohio 44106
               </p>
             </div>
           </div>
