--- a/events.htm
+++ b/events.htm
@@ -448,8 +448,8 @@
                       <li>
                         <a
                           class="wp-block-latest-posts__post-title"
-                          href="https://www.osu.edu/"
-                          >The Ohio State University</a
+                          href="https://www.osc.edu/"
+                          >Ohio Supercomputer Center</a
                         >
                       </li>
                       <li>
