--- a/index.htm
+++ b/index.htm
@@ -151,11 +151,15 @@
           <h2 class="site-title">
             <a
               href="https://oh-scipe.github.io/"
-              title="Cross-Institutional Research Engagement Network (CIREN) "
+              title="Cross-Institutional Research Engagement Network (CIREN)"
               rel="home"
-              >OH-SCIPE
+            >OH-SCIPE
             </a>
+            <p style="font-size: 14px; color: #666; font-weight: normal; margin-top: 5px;">
+              Empowering Science and Engineering through Advanced AI
+            </p>
           </h2>
+          
           <button type="button" class="btn btn-findpage">
             <span class="sr-only">Toggle navigation</span>
             <svg
