--- a/people.htm
+++ b/people.htm
@@ -229,10 +229,13 @@
           <h2 class="site-title">
             <a
               href="https://oh-scipe.github.io/"
-              title="Cross-Institutional Research Engagement Network (CIREN) "
+              title="Cross-Institutional Research Engagement Network (CIREN)"
               rel="home"
-              >OH-SCIPE
+            >OH-SCIPE
             </a>
+            <p style="font-size: 14px; color: #666; font-weight: normal; margin-top: 5px;">
+              Empowering Science and Engineering through Advanced AI
+            </p>
           </h2>
           <button type="button" class="btn btn-findpage">
             <span class="sr-only">Toggle navigation</span>
@@ -726,7 +729,7 @@
                           </a>
                         </li>
                         <li class="wp-social-link wp-social-link-linkedin wp-block-social-link">
-                          <a href="#" class="wp-block-social-link-anchor"> <!-- Replace # with actual LinkedIn URL if available -->
+                          <a href="https://www.linkedin.com/in/hadrian-djohari-a281b91/" class="wp-block-social-link-anchor"> <!-- Replace # with actual LinkedIn URL if available -->
                             <svg
                             width="24"
                             height="24"
