--- a/people.htm
+++ b/people.htm
@@ -785,7 +785,7 @@
         </font></a>
     </p>
     <p>
-      Dr. Evan Jaffe is a Machine Learning Engineer at the Ohio Supercomputer Center with research experience in computational linguistics.                    </p>
+       Evan Jaffe, Ph.D., is a Machine Learning Engineer at the Ohio Supercomputer Center with research experience in computational linguistics.                    </p>
     <p>
       <strong>Expertise:</strong> High performance computing, machine learning with an emphasis on language modeling and related tasks.
     </p>
