--- a/people.htm
+++ b/people.htm
@@ -296,7 +296,7 @@
                           id="menu-item-4775"
                           class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4775"
                         >
-                          <a href="./projects.htm">Projects</a>
+                          <a href="./previous_activities.htm">Projects</a>
                         </li>
 
                         <li
