--- a/index.htm
+++ b/index.htm
@@ -220,7 +220,7 @@
                           id="menu-item-4775"
                           class="menu-item menu-item-type-post_type menu-item-object-page menu-item-4775"
                         >
-                          <a href="./projects.htm">Projects</a>
+                          <a href="./previous_activities.htm">Previous Activities</a>
                         </li>
 
                         <li
@@ -268,6 +268,11 @@
                   advancements, our project aims to further integrate
                   cutting-edge machine learning engineering into S&E research
                   initiatives.
+                </p>
+
+                <h3 class="my-4">AI Research Experience Summer Opportunity for Undergraduates 2025</h3>
+                <p>
+                  For more information, please visit the <a href="https://www.osc.edu/content/ai_research_experience_summer_opportunity_for_undergraduates" target="_blank">Ohio Supercomputer Center Website</a>.
                 </p>
 
                 <!-- <blockquote> -->
