--- a/people.htm
+++ b/people.htm
@@ -228,11 +228,10 @@
                       <img
                         loading="lazy"
                         decoding="async"
-                        width="250"
-                        height="350"
                         src="assets/images/profile/VipinChaudhary.jpg" 
                         alt="Vipin Chaudhary" 
                         class="wp-image-XXXX size-full"
+                        style="width: 250px; height: 350px; object-fit: cover; object-position: top; border-radius: 4px;"
                       />
                     </figure>
                     <div class="wp-block-media-text__content">
@@ -241,13 +240,9 @@
                       <ul class="wp-block-social-links is-layout-flex wp-block-social-links-is-layout-flex" style="display: flex; flex-direction: row; gap: 10px; list-style: none; padding: 0; margin: 0 0 1em 0;">
                         <li class="wp-social-link wp-block-social-link">
                             <a href="https://orcid.org/0000-0002-4432-5064" class="wp-block-social-link-anchor">
-                              <img
-                                decoding="async"
-                                src="assets/images/icons/orcid_32x32.webp"
-                                alt="ORCID logo"
-                                width="24"
-                                height="24"
-                              />
+                              <svg width="24" height="24" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                                <path d="M12 0C5.372 0 0 5.372 0 12s5.372 12 12 12 12-5.372 12-12S18.628 0 12 0zM7.369 4.378c.525 0 .947.431.947.947s-.422.947-.947.947a.95.95 0 0 1-.947-.947c0-.525.422-.947.947-.947zm-.722 3.038h1.444v10.041H6.647V7.416zm3.562 0h3.9c3.712 0 5.344 2.653 5.344 5.025 0 2.578-2.016 5.025-5.325 5.025h-3.919V7.416zm1.444 1.306v7.419h2.438c1.938 0 2.969-1.031 2.969-2.969 0-2.094-1.156-4.45-3.081-4.45h-2.325z"></path>
+                              </svg>
                               <span class="wp-block-social-link-label screen-reader-text">ORCID</span>
                             </a>
                         </li>
@@ -268,7 +263,7 @@
                             <span class="wp-block-social-link-label screen-reader-text">Mail</span>
                           </a>
                         </li>
-                        <li class="wp-social-link wp-social-link-linkedin wp-block-social-link">
+                        <li class="wp-social-link wp-social-link-linkedin wp-block-social-link" style="background-color: #f0f0f0 !important; color: #444 !important;">
                           <a href="https://www.linkedin.com/in/vipin-chaudhary-379529/" class="wp-block-social-link-anchor">
                             <svg
                               width="24"
@@ -311,11 +306,10 @@
                       <img
                         loading="lazy"
                         decoding="async"
-                        width="250"
-                        height="350"
                         src="assets/images/profile/jane.jpeg" 
                         alt="Jane Combs" 
                         class="wp-image-XXXX size-full"
+                        style="width: 250px; height: 350px; object-fit: cover; object-position: top; border-radius: 4px;"
                       />
                     </figure>
                     <div class="wp-block-media-text__content">
@@ -324,13 +318,9 @@
                       <ul class="wp-block-social-links is-layout-flex wp-block-social-links-is-layout-flex" style="display: flex; flex-direction: row; gap: 10px; list-style: none; padding: 0; margin: 0 0 1em 0;">
                         <li class="wp-social-link wp-block-social-link">
                             <a href="https://orcid.org/0000-0002-4432-5064" class="wp-block-social-link-anchor">
-                              <img
-                                decoding="async"
-                                src="assets/images/icons/orcid_32x32.webp"
-                                alt="ORCID logo"
-                                width="24"
-                                height="24"
-                              />
+                              <svg width="24" height="24" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                                <path d="M12 0C5.372 0 0 5.372 0 12s5.372 12 12 12 12-5.372 12-12S18.628 0 12 0zM7.369 4.378c.525 0 .947.431.947.947s-.422.947-.947.947a.95.95 0 0 1-.947-.947c0-.525.422-.947.947-.947zm-.722 3.038h1.444v10.041H6.647V7.416zm3.562 0h3.9c3.712 0 5.344 2.653 5.344 5.025 0 2.578-2.016 5.025-5.325 5.025h-3.919V7.416zm1.444 1.306v7.419h2.438c1.938 0 2.969-1.031 2.969-2.969 0-2.094-1.156-4.45-3.081-4.45h-2.325z"></path>
+                              </svg>
                               <span class="wp-block-social-link-label screen-reader-text">ORCID</span>
                             </a>
                         </li>
@@ -351,7 +341,7 @@
                             <span class="wp-block-social-link-label screen-reader-text">Mail</span>
                           </a>
                         </li>
-                        <li class="wp-social-link wp-social-link-linkedin wp-block-social-link">
+                        <li class="wp-social-link wp-social-link-linkedin wp-block-social-link" style="background-color: #f0f0f0 !important; color: #444 !important;">
                           <a href="https://www.linkedin.com/in/jane-combs-80886110/" class="wp-block-social-link-anchor">
                             <svg
                               width="24"
@@ -386,11 +376,10 @@
                       <img
                         loading="lazy"
                         decoding="async"
-                        width="250"
-                        height="350"
                         src="assets/images/profile/karen.png" 
                         alt="Karen Tomko" 
                         class="wp-image-XXXX size-full"
+                        style="width: 250px; height: 350px; object-fit: cover; object-position: top; border-radius: 4px;"
                       />
                     </figure>
                     <div class="wp-block-media-text__content">
@@ -399,13 +388,9 @@
                       <ul class="wp-block-social-links is-layout-flex wp-block-social-links-is-layout-flex" style="display: flex; flex-direction: row; gap: 10px; list-style: none; padding: 0; margin: 0 0 1em 0;">
                         <li class="wp-social-link wp-block-social-link">
                             <a href="https://orcid.org/0000-0002-6542-853X" class="wp-block-social-link-anchor">
-                              <img
-                                decoding="async"
-                                src="assets/images/icons/orcid_32x32.webp"
-                                alt="ORCID logo"
-                                width="24"
-                                height="24"
-                              />
+                              <svg width="24" height="24" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                                <path d="M12 0C5.372 0 0 5.372 0 12s5.372 12 12 12 12-5.372 12-12S18.628 0 12 0zM7.369 4.378c.525 0 .947.431.947.947s-.422.947-.947.947a.95.95 0 0 1-.947-.947c0-.525.422-.947.947-.947zm-.722 3.038h1.444v10.041H6.647V7.416zm3.562 0h3.9c3.712 0 5.344 2.653 5.344 5.025 0 2.578-2.016 5.025-5.325 5.025h-3.919V7.416zm1.444 1.306v7.419h2.438c1.938 0 2.969-1.031 2.969-2.969 0-2.094-1.156-4.45-3.081-4.45h-2.325z"></path>
+                              </svg>
                               <span class="wp-block-social-link-label screen-reader-text">ORCID</span>
                             </a>
                         </li>
@@ -426,7 +411,7 @@
                             <span class="wp-block-social-link-label screen-reader-text">Mail</span>
                           </a>
                         </li>
-                        <li class="wp-social-link wp-social-link-linkedin wp-block-social-link">
+                        <li class="wp-social-link wp-social-link-linkedin wp-block-social-link" style="background-color: #f0f0f0 !important; color: #444 !important;">
                           <a href="https://www.linkedin.com/in/karen-tomko-53a6613/" class="wp-block-social-link-anchor">
                             <svg
                               width="24"
@@ -461,11 +446,10 @@
                       <img
                         loading="lazy"
                         decoding="async"
-                        width="250"
-                        height="350"
                         src="assets/images/profile/Sanjaya-HeadShot.jpg" 
                         alt="Sanjaya Gajurel, Ph.D." 
                         class="wp-image-XXXX size-full"
+                        style="width: 250px; height: 350px; object-fit: cover; object-position: top; border-radius: 4px;"
                       />
                     </figure>
                     <div class="wp-block-media-text__content">
@@ -474,13 +458,9 @@
                       <ul class="wp-block-social-links is-layout-flex wp-block-social-links-is-layout-flex" style="display: flex; flex-direction: row; gap: 10px; list-style: none; padding: 0; margin: 0 0 1em 0;">
                         <li class="wp-social-link wp-block-social-link">
                             <a href="https://orcid.org/0000-0002-6162-8737" class="wp-block-social-link-anchor">
-                              <img
-                                decoding="async"
-                                src="assets/images/icons/orcid_32x32.webp"
-                                alt="ORCID logo"
-                                width="24"
-                                height="24"
-                              />
+                              <svg width="24" height="24" viewBox="0 0 24 24" version="1.1" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" focusable="false">
+                                <path d="M12 0C5.372 0 0 5.372 0 12s5.372 12 12 12 12-5.372 12-12S18.628 0 12 0zM7.369 4.378c.525 0 .947.431.947.947s-.422.947-.947.947a.95.95 0 0 1-.947-.947c0-.525.422-.947.947-.947zm-.722 3.038h1.444v10.041H6.647V7.416zm3.562 0h3.9c3.712 0 5.344 2.653 5.344 5.025 0 2.578-2.016 5.025-5.325 5.025h-3.919V7.416zm1.444 1.306v7.419h2.438c1.938 0 2.969-1.031 2.969-2.969 0-2.094-1.156-4.45-3.081-4.45h-2.325z"></path>
+                              </svg>
                               <span class="wp-block-social-link-label screen-reader-text">ORCID</span>
                             </a>
                         </li>
@@ -501,7 +481,7 @@
                             <span class="wp-block-social-link-label screen-reader-text">Mail</span>
                           </a>
                         </li>
-                        <li class="wp-social-link wp-social-link-linkedin wp-block-social-link">
+                        <li class="wp-social-link wp-social-link-linkedin wp-block-social-link" style="background-color: #f0f0f0 !important; color: #444 !important;">
                           <a href="https://www.linkedin.com/in/sanjayagajurel/" class="wp-block-social-link-anchor">
                             <svg
                               width="24"
