--- a/about.htm
+++ b/about.htm
@@ -10,7 +10,7 @@
 
     <link
       rel="shortcut icon"
-      href="assets/images/logo/NSF_Official_logo_Low_Res_150ppi-300x300.png"
+      href="./assets/images/logo/NSF_Official_logo_Low_Res_150ppi-300x300.png"
     />
 
     <link rel="dns-prefetch" href="https://code.jquery.com/" />
@@ -87,7 +87,7 @@
       href="https://oh-scipe.github.io/wp-json/oembed/1.0/embed?url=https%3A%2F%2Fciren.oh-scipe.github.io%2F&amp;format=xml"
     />
     <script
-      src="assets/js/wp-emoji-release.min.js"
+      src="./assets/js/wp-emoji-release.min.js"
       defer="defer"
     ></script>
   </head>
@@ -271,7 +271,7 @@
                     <img
                       loading="lazy"
                       decoding="async"
-                      src="assets/images/logo/NSF_Official_logo_Low_Res_150ppi-300x300.png"
+                      src="./assets/images/logo/NSF_Official_logo_Low_Res_150ppi-300x300.png"
                       alt=""
                       class="wp-image-4578"
                       width="287"
@@ -487,7 +487,7 @@
     </style>
     <script
       type="text/javascript"
-      src="assets/js/jquery-1.11.2.min.js"
+      src="./assets/js/jquery-1.11.2.min.js"
       id="jquery-js"
     ></script>
     <script type="text/javascript" id="utthehill-utk-js-extra">
@@ -503,7 +503,7 @@
     </script>
     <script
       type="text/javascript"
-      src="assets/js/v2019.js"
+      src="./assets/js/v2019.js"
       id="utthehill-utk-js"
     ></script>
 
